src/objects/QueueName_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>doAutoCloseCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doAutoCloseCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doCDQCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doCDQCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doOpenWorkorderCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doOpenWorkorderCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doPQRCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doPQRCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doResolutionCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doResolutionCheck</label>
        <type>Checkbox</type>
    </fields>
    <label>QueueName Setting</label>
</CustomObject>